@@ -1,6 +1,6 @@
 {
   "name": "menhera-bot",
-  "version": "3.5.1-HOTFIX-b",
+  "version": "3.5.2",
   "engines": {
     "node": ">=16.6.0"
   },
